<resources>
    <string name="app_name">KickMyB</string>
    <string name="home">Home</string>
    <string name="addtaskmenue">Add task</string>
    <string name="d_connexion">Disconnect</string>
    <string name="dOpen">Close</string>
    <string name="dClose">Open</string>
    <string name="activity_connecion_connectionTv">Connection :</string>
    <string name="activity_connection_usernamehint">Username</string>
    <string name="activity_connection_passwordhint">Password</string>
    <string name="activity_connection_connexionButton">Connection</string>
    <string name="activity_connection_no_account_Tv">No account yet? Register!</string>
    <string name="activity_connection_inscriptionButton">registration</string>
    <string name="activity_home_NewTaskButton">New task</string>
    <string name="Activity_consultation_changeButton">Change</string>
    <string name="activity_creation_nameHint">Name</string>
    <string name="Activity_creation_expiration_dateTv">Choose the due date of the task :</string>
    <string name="Activity_creation_creationButton">Creation</string>
    <string name="Activity_inscription_inscriptionTv">Inscription</string>
    <string name="Activity_inscription_usernameHint">Username</string>
    <string name="Activity_inscription_passwordHint">Password</string>
    <string name="Activity_inscription_confirmationHint">Confirmation</string>
    <string name="Activity_inscription_creationButton">Creation</string>
    <string name="ConnexionActivity_title">Connection</string>
    <string name="ConsultationActivity_title">Consultation</string>
    <string name="ConsultationActivity_TaskName">Task name : </string>
    <string name="ConsultationActivity_TimeSinceCreation">Time since creation : </string>
    <string name="ConsultationActivity_Limit">Deadline : </string>
    <string name="CreationActivity_title">Creation of the task</string>
    <string name="InscriptionActivity_title">Inscription</string>
    <string name="HomeActivity_title">Home</string>
    <string name="NoInternet">No internet connexion</string>
    <string name="DeconnectionMessage">You have been successfully disconnected</string>
    <string name="EnterName">You need to enter a name</string>
    <string name="EnterPass">You need to enter a password</string>
    <string name="EnterSamePass">The password you used need to be the same</string>
    <string name="Inscription400Length">Username is too long, must be between 1 and 255, you have </string>
    <string name="Inscription400Exist">Error 400, User already exist </string>
    <string name="Connexion400Invalid">Error 400, invalid information </string>
    <string name="Home403Expiration">Error 401, your connection has expired </string>
    <string name="Home403NotConnected">Error 403, you are not connected </string>
    <string name="Creation400Length">Your task name is too long, must be between 1 and 175, you have </string>
    <string name="Creation400Exist">Error 400, name already exist </string>
    <string name="Creation403Expired">Error 401, your connection has expired </string>
    <string name="Creation403NotConnected">Error 403, you are not connected </string>
    <string name="CreationEnterName">You need to give the task a name</string>
    <string name="Consultation404">Error 404, the task doesn\'t exist or has been deleted </string>
    <string name="ProgressDialogWait">Please wait</string>
    <string name="ProgressDialogConnect">Connexion in progress</string>
    <string name="ProgressDialogInsc">Inscription in progress</string>
    <string name="ProgressDialogDesc">Disconnection in progress</string>
    <string name="ProgressDialogFetchList">Fetching your tasks\'s list</string>
    <string name="ProgressDialogCreation">Task creation in progress</string>
    <string name="ProgressDialogFetchInformation">Fetching task\'s information in progress</string>
    <string name="ProgressDialogProgress">Changing your tasks progress in progress</string>

</resources>