<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ConnexionActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_margin="10dp"
        android:text="@string/activity_connecion_connectionTv" />

    <EditText
        android:id = "@+id/editTextPersonName"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint="@string/activity_connection_usernamehint"
        android:inputType="textPersonName"
        android:layout_margin="10dp"
        />

    <EditText
        android:id = "@+id/editTextPassword"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/activity_connection_passwordhint"
        android:inputType = "textPassword" />

    <Button
        android:id="@+id/Connection"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_connection_connexionButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="25dp"
        android:text="@string/activity_connection_no_account_Tv" />

    <Button
        android:id="@+id/Inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/activity_connection_inscriptionButton" />

</LinearLayout>